@@ -213,7 +213,8 @@ Internal structure:
     - Resize                                                            done
     - setProjection                                                     done
     - other uses of d->viewParams                                       done
-    - create tiles dialog                                               --
+    - create tiles dialog                                               done
+    - class doc for MarbleMap                                           --
  * Refactor KML to use QXmlStreamReader                                 ----
  * Make MarbleModel a real model and MarbleWidget a real view           ----
  * Make it possible to paint on whatever QPainter Marble is given       ----
